--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint src/",
     "compile": "babel -d bin/ src/",
     "prepublish": "npm run compile",
-    "postinstall" : "npm run compile",
+    // "postinstall" : "npm run compile",
     "read:version": "echo $npm_package_version"
   },
   "devDependencies": {
